--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio-website",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://loukiknaik.github.io/portfolio",
+  "homepage": "https://portfolio.loukik.dev",
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@testing-library/jest-dom": "^5.17.0",
