--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "portfolio-website",
   "version": "0.1.0",
   "private": true,
+  "license": "MIT",
   "homepage": "https://portfolio.loukik.dev",
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
