--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
   "homepage": "https://portfolio.loukik.dev",
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@react-pdf/renderer": "^4.3.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.17",
+    "pdfjs-dist": "^3.11.174",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-pdf": "^7.1.2",
+    "react-router-dom": "^7.5.2",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.4.1",
     "web-vitals": "^2.1.4"
