--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.17",
+    "framer-motion": "^12.9.2",
     "pdfjs-dist": "^3.11.174",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
